--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "eslint": "^8.57.1",
     "eslint-plugin-vue": "^9.33.0",
     "lodash.isequal": "^4.5.0",
-    "vue-d3-network": "^0.1.28"
+    "vue-d3-network": "https://github.com/aitgelion/vue-d3-network"
   }
 }
